--- a/src/week1/staffPanel.form
+++ b/src/week1/staffPanel.form
@@ -369,8 +369,8 @@
                               </Group>
                               <Group type="102" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="jToggleButton1" alignment="0" min="-2" pref="40" max="-2" attributes="0"/>
-                                      <Component id="jScrollPane2" alignment="0" min="-2" pref="141" max="-2" attributes="0"/>
+                                      <Component id="jScrollPane2" min="-2" pref="141" max="-2" attributes="0"/>
+                                      <Component id="jToggleButton1" min="-2" pref="39" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace max="32767" attributes="0"/>
                               </Group>
@@ -406,6 +406,11 @@
                   </SubComponents>
                 </Container>
                 <Component class="javax.swing.JToggleButton" name="jToggleButton1">
+                  <Properties>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                      <Image iconType="3" name="/icon/key (1).png"/>
+                    </Property>
+                  </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jToggleButton1ActionPerformed"/>
                   </Events>
